--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,11 @@
             android:title="@string/profile" />
 
         <item
+            android:id="@+id/nav_learning"
+            android:icon="@android:drawable/ic_menu_mapmode"
+            android:title="@string/learning" />
+
+        <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
