--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,10 +18,10 @@
         tools:layout="@layout/fragment_profile" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.polus.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_learning"
+        android:name="com.example.polus.ui.learning.LearningFragment"
+        android:label="@string/menu_learning"
+        tools:layout="@layout/fragment_learning" />
 
     <fragment
         android:id="@+id/nav_slideshow"
