--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.learning.LearningFragment">
 
     <com.google.android.material.card.MaterialCardView
@@ -19,30 +19,11 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <TextView
-                android:id="@+id/text_question"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Loading question..."
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textColor="@android:color/black" />
-
-            <EditText
-                android:id="@+id/edit_answer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Your answer"
-                android:layout_marginTop="16dp"
-                android:inputType="text" />
-
-            <Button
-                android:id="@+id/button_submit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Submit"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="8dp"/>
 
             <TextView
                 android:id="@+id/text_feedback"
