--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,14 +31,20 @@
                 android:textStyle="bold"
                 android:layout_gravity="center_horizontal" />
 
-            <TextView
-                android:id="@+id/text_profile"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="8dp"/>
+
+            <TextView
+                android:id="@+id/text_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textSize="20sp"
-                android:textColor="@android:color/black" />
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:visibility="gone"/>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -50,7 +56,8 @@
         android:textAlignment="center"
         android:textSize="16sp"
         android:textColor="@android:color/black"
-        android:layout_gravity="bottom" />
+        android:layout_gravity="bottom"
+        tools:ignore="RtlCompat" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
