--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,14 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
         <item
+            android:id="@+id/nav_questions"
+            android:icon="@android:drawable/ic_menu_add"
+            android:title="@string/menu_questions" />
+        <item
+            android:id="@+id/questionsListFragment"
+            android:icon="@android:drawable/ic_menu_help"
+            android:title="@string/menu_questions" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@android:drawable/ic_lock_power_off"
             android:title="@string/logout" />
