--- a/app/src/main/res/layout/item_quote.xml
+++ b/app/src/main/res/layout/item_quote.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/gradient_drawable"
     android:padding="16dp">
 
     <TextView
@@ -10,6 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/color_selector"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
