--- a/app/src/main/res/layout/item_trivia.xml
+++ b/app/src/main/res/layout/item_trivia.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/gradient_drawable"
     android:padding="16dp">
+
 
     <TextView
         android:id="@+id/text_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Question"
+        android:text="@string/question"
         android:textSize="20sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/color_selector"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"/>
 
@@ -19,7 +21,7 @@
         android:id="@+id/edit_answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Your answer"
+        android:hint="@string/your_answer"
         android:inputType="text"
         android:layout_marginBottom="8dp"/>
 
@@ -27,6 +29,7 @@
         android:id="@+id/button_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:background="@drawable/drawable_selector"
+        android:text="@string/submit"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
