--- a/app/src/main/res/layout/fragment_question_detail.xml
+++ b/app/src/main/res/layout/fragment_question_detail.xml
@@ -43,34 +43,36 @@
         android:id="@+id/commentsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintTop_toBottomOf="@+id/questionSubjectTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/commentEditText"
         android:padding="16dp"/>
 
-    <EditText
-        android:id="@+id/commentEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Add a comment"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentsRecyclerView"
-        android:padding="16dp"
-        android:layout_marginBottom="8dp"/>
 
     <Button
         android:id="@+id/addCommentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentEditText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="304dp"
         android:padding="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:text="Add"
+        app:layout_constraintBottom_toTopOf="@+id/commentEditText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/commentEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:hint="Add a comment"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commentsRecyclerView" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
